<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aam_item_border"
    android:orientation="vertical">

    <include layout="@layout/view_custom_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_10"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/border_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_commodity_title"
            android:textColor="@color/color_33"
            android:textSize="@dimen/font_30" />

        <EditText
            android:id="@+id/et_commodity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/border_10"
            android:textColor="@color/color_99"
            android:textSize="@dimen/font_26" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_10"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/border_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_commodity_support_money"
            android:textColor="@color/color_33"
            android:textSize="@dimen/font_30" />

        <EditText
            android:id="@+id/et_commodity_support_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="numberDecimal"
            android:padding="@dimen/border_10"
            android:textColor="@color/color_99"
            android:textSize="@dimen/font_26" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_commodity_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_10"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/border_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/str_commodity_content"
            android:textColor="@color/color_33"
            android:textSize="@dimen/font_30" />

        <TextView
            android:layout_width="@dimen/border_30"
            android:layout_height="@dimen/border_30"
            android:layout_margin="@dimen/border_10"
            android:layout_weight="1"
            android:drawableRight="@mipmap/item_more" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_64"
        android:background="@mipmap/submit"
        android:gravity="center"
        android:text="保存"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_30" />
</LinearLayout>